Changes since 1.0:

* Added the "content-type" parameter for URLs using the POST method.
  [Philippe Marzouk <phil@ozigo.org>]

* Remove .deps code that is just broken for now.  [Justin Erenkrantz]

* Added configversion attribute (root element <flood>) which ties config
  file structure with certain flood version and warns user if there is a
  conflict.  [Jacek Prucia]

* Added attribute responsescript (element <url>), which allows flood to
  delegate response processing to external script.  [Jacek Prucia]

* Change open_socket prototype to return errors.  [Justin Erenkrantz]
  
* Fix HEAD responses with Content-Length specified being handled incorrectly.
  [Justin Erenkrantz]

* Flood manual (DocBook based).  [Jacek Prucia]

* Added <baseurl> element. When present, it's contents are copied in front
  of every <url> element, which makes relative urllist's possible.
  [Jacek Prucia]

* Added basic auth support. When user and passowrd attributes of <url>
  element are present and non-empty, flood sends auth data with request.
  [Jacek Prucia]

* Added generic_fullresp_recv_resp() to force full response.
  [Phi-Long Tran <ptran@pobox.com>]

* Fixed compiler warning about signed/unsigned mismatch in generic_recv_resp.
  [Phi-Long Tran <ptran@pobox.com>]

* Include correct header to import defintion of apr_pstrmemdup in
  flood_socket_keepalive.c.  [Phi-Long Tran <ptran@pobox.com>]

* Namespace protect expand_param_e enum values to not conflict with Win32
  headers.  [Phi-Long Tran <ptran@pobox.com>]

* Added error handling for failed config-file open.
  [Phi-Long Tran <ptran@pobox.com>]

* Fix Win32 crash resulting from strtoll() macro
  [Phi-Long Tran <ptran@pobox.com>]

* Catch some badly formed URLs and exit instead of later crashing.
  [Jacek Prucia <jacek.prucia@7bulls.com>]

* Fix tab formatting in some analysis scripts.
  [Reini Urban <rurban@inode.at>]

Changes since milestone-03:

* Revamp keepalive_recv_resp to use the APR table API.  This allows true