@@ -1,5 +1,8 @@
 CC=@CC@
 
+APR_CONFIG=@APR_CONFIG@
+APU_CONFIG=@APU_CONFIG@
+
 CPPFLAGS=@CPPFLAGS@
 CFLAGS=@CFLAGS@
 LDFLAGS=@LDFLAGS@ @LIBTOOL_LDFLAGS@
