@@ -50,7 +50,7 @@ MOD_LINK = $(LIBTOOL) $(LTFLAGS) --mode=link $(COMPILE) -module $(LT_LDFLAGS) $(
 
 # Helper programs
 
-MKINSTALLDIRS = $(top_srcdir)/build/mkdir.sh
+MKINSTALLDIRS = `$(APR_CONFIG) --installbuilddir`/mkdir.sh
 INSTALL = $(LIBTOOL) --mode=install $(top_srcdir)/build/install.sh -c
 INSTALL_DATA = $(INSTALL) -m 644
 INSTALL_PROGRAM = $(INSTALL) -m 755 $(INSTALL_PROG_FLAGS)
